Scrollbar styling + fix footer height calc

--- a/styles/scrollbar.less
+++ b/styles/scrollbar.less
@@ -1,41 +1,20 @@
 .scrollbar() {
 
 	::-webkit-scrollbar {
-	  width: 8px;
-	  height: 8px;
+	  width: 10px;
+	  height: 10px;
 	}
 	
 	::-webkit-scrollbar-thumb {
-	  background: #e0e1dd;
-	  border: 0px none #ffffff;
-	  border-radius: 6px;
-	}
-	
-	::-webkit-scrollbar-button {
-	}
-
-	::-webkit-scrollbar-thumb:hover {
-	  background: #ffffff;
-	}
-	
-	::-webkit-scrollbar-thumb:active {
-	  background: #7c7880;
+	  background: #888888;
+	  border: 0px none #FFFFFF;
 	}
 	
 	::-webkit-scrollbar-track {
-	  background: #666666;
-	  border: 0px none #ffffff;
-	  border-radius: 8px;
+	  background: #EEEEEE;
+	  border: 0px none #FFFFFF;
 	}
-	
-	::-webkit-scrollbar-track:hover {
-	  background: #666666;
-	}
-	
-	::-webkit-scrollbar-track:active {
-	  background: #333333;
-	}
-	
+		
 	::-webkit-scrollbar-corner {
 	  background: transparent;
 	}
