--- a/styles/table.less
+++ b/styles/table.less
@@ -1,3 +1,5 @@
+@import "theme.less";
+
 .table() {
-	border: 1px solid black;
+	border: 1px solid @grid-outer-border;
 }
