--- a/styles/themes/default.less
+++ b/styles/themes/default.less
@@ -1,2 +1,3 @@
-@grid-cell-border: rgb(204, 204, 204);
+@grid-outer-border: #AAAAAA;
+@grid-cell-border: #CCCCCC;
 @grid-cell-bg: white;
